syntax = "proto3";
package book;

option go_package = "github.com/Prrost/protoFinalAP2/book-service/book";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


message Book {
  string id               = 1;
  string title            = 2;
  string author           = 3;
  string isbn             = 4;
  string description      = 5;
  int32 total_copies      = 6;
  int32 available_copies  = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message ListBooksRequest {
  int32 page = 1;
  int32 size = 2;
}

message ListBooksResponse {
  repeated Book books = 1;
  int32 total_pages   = 2;
}

message GetBookRequest {
  string id = 1;
}

message CreateBookRequest {
  string title       = 1;
  string author      = 2;
  string isbn        = 3;
  string description = 4;
  int32 total_copies = 5;
}

message UpdateBookRequest {
  Book book = 1;
}

message DeleteBookRequest {
  string id = 1;
}

message AdjustQuantityRequest {
  string id    = 1;
  int32 delta  = 2;
}

message AdjustQuantityResponse {
  Book book = 1;
}

service BookService {
  rpc ListBooks       (ListBooksRequest)       returns (ListBooksResponse);
  rpc GetBook         (GetBookRequest)         returns (Book);
  rpc CreateBook      (CreateBookRequest)      returns (Book);
  rpc UpdateBook      (UpdateBookRequest)      returns (Book);
  rpc DeleteBook      (DeleteBookRequest)      returns (google.protobuf.Empty);
  rpc AdjustQuantity  (AdjustQuantityRequest)  returns (AdjustQuantityResponse);
}
